# arm_gicv2

./: Cargo.toml
src/: gic_v2.rs  lib.rs
src/regs/: gicd_sgir.rs  mod.rs
