[package]
name = "arm_gicv2"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ARM Generic Interrupt Controller version 2 (GICv2) register definitions and basic operations"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arm_gicv2"
documentation = "https://docs.rs/arm_gicv2"
keywords = ["arceos", "arm", "aarch64", "gic", "interrupt-controller"]
categories = ["embedded", "no-std", "hardware-support", "os"]

[dependencies]
tock-registers = "0.8"
